--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						</div>
 						<div class="col-md-6 col-sm-12 col-xs-12">
 							<div class="banner-images">
-								<img src="images/banner.jpg" alt=""/>
+								<img src="images/banner.jpg">
 							</div>
 						</div>						
 					</div>
