--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 										They maintain a presence on Facebook, where they describe themselves as a group dedicated to sharing Android and web applications and their development.
 										Members are encouraged to promote their web, Android, and iOS apps within the community
 										Contact me
-										abdultechanddevelopment@gmail.com
+										<a href="mailto:abdultechanddevelopment@gmail.com">abdultechanddevelopment@gmail.com</a>
 										Phone:
-										Call: 07065371155 08029540826.</p>
+										<a href="tel+2347065371155">+234 706-537-1155</a> 08029540826.</p>
 									<div class="about_details">
 										<div class="row">
 											<div class="col-md-12">
@@ -140,14 +140,14 @@
 											<div class="col-md-12">
 												<div class="ct_about">
 												   <span> Phone Number </span>
-												   : +234 706-537-1155
+												   <a href="tel+234-706-537-1155">+234-706-537-1155</a>
 												</div>
 											</div>
 											
 											<div class="col-md-12">
 												<div class="ct_about">
 												   <span> Email </span>
-												   : abdultechanddevelopment@gmail.com
+												   <a href="mailto:abdultechanddevelopment@gmail.com">: abdultechanddevelopment@gmail.com</a>
 												</div>
 											</div>
 										</div>
