--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										Contact me
 										<a href="mailto:abdultechanddevelopment@gmail.com">abdultechanddevelopment@gmail.com</a>
 										Phone:
-										<a href="tel+2347065371155">+234 706-537-1155</a> 08029540826.</p>
+										<a href="tel:+2347065371155">+234-706-537-1155</a> <a href="tel:+234-802-954-0826">+234-802-954-0826</a></p>
 									<div class="about_details">
 										<div class="row">
 											<div class="col-md-12">
@@ -140,7 +140,7 @@
 											<div class="col-md-12">
 												<div class="ct_about">
 												   <span> Phone Number </span>
-												   <a href="tel+234-706-537-1155">+234-706-537-1155</a>
+												   <a href="tel:+234-706-537-1155">+234-706-537-1155</a>
 												</div>
 											</div>
 											
