--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 											<span>| Design</span>																																	
 											<p>Can I build an app by myself?
 												Today, anyone can create their own apps without coding or learning a programming language.
-												 No-code development platforms make it easy for and non-technical users to create an app. <a href="+2347065371155">Visit</a></p>
+												 No-code development platforms make it easy for and non-technical users to create an app. <a href="https://chat.whatsapp.com/EkUvTgUHef4FO1U6WiBxJl">Visit</a></p>
 											<a href="#" class="btn blog_btn">Read More</a>
 										</div>
 									</div>
